src/tests/snapshots/treetop_core__tests__dns__tests__test_host_operations__charlie_delete_host_explicit_deny.snap
---
source: src/tests/dns.rs
expression: decision
---
{
  "Deny": {
    "version": {
      "hash": "d7efadba123ba2cfa6cf1768a1db2a82b5a199190b1b9d344243d976e2b0f790",
      "loaded_at": "[timestamp]"
    }
  }
}
